optimize jvm argument